responsive full header added

--- a/index.html
+++ b/index.html
@@ -14,55 +14,88 @@
     />
     <!-- try customizing your config -->
     <script>
-        tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-              }
-            }
-          }
-        }
-      </script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              clifford: "#da373d",
+            },
+          },
+        },
+      };
+    </script>
     <title>Assignment 3</title>
   </head>
- <body>
-    <header class="mt-6">
-        <nav class="flex justify-between mx-auto px-4 sm:px-20 border-b-2 border-green-300 sm:border-b-0">
-            <div class="ml-4 md:ml-0">
-                <img src="c2-assets/logo-header.png" alt="Logo" class="w-24 md:w-32">
-            </div>
+  <body>
+    <header class="mt-6 bg-gradient-to-b from-[#FFFFFF] to-[#EFEBE3]">
+      <nav
+        class="flex justify-between mx-auto px-4 sm:px-20 border-b-2 border-green-300 sm:border-b-0"
+      >
+        <div class="ml-4 md:ml-0">
+          <img
+            src="c2-assets/logo-header.png"
+            alt="Logo"
+            class="w-24 md:w-32"
+          />
+        </div>
 
-            <!-- navigation links -->
-            <div class="hidden md:flex space-x-8 justify-center items-center text-2xl">
-                <a href="#" class="text-gray-700 hover:text-green-600 font-medium">Product</a>
-                <a href="#" class="text-gray-700 hover:text-green-600 font-medium">Services</a>
-                <a href="#" class="text-gray-700 hover:text-green-600 font-medium">Contact us</a>
-            </div>
+        <!-- navigation links -->
+        <div
+          class="hidden md:flex space-x-8 justify-center items-center text-2xl"
+        >
+          <a href="#" class="text-gray-700 hover:text-green-600 font-medium"
+            >Product</a
+          >
+          <a href="#" class="text-gray-700 hover:text-green-600 font-medium"
+            >Services</a
+          >
+          <a href="#" class="text-gray-700 hover:text-green-600 font-medium"
+            >Contact us</a
+          >
+        </div>
 
-            <!-- icon and button-->
-            <div class="hidden md:flex space-x-8 text-base items-center">
-                <i class="fa-solid fa-magnifying-glass text-xl"></i>
-                <i class="fa-solid fa-cart-shopping text-xl"></i>
-                <button class="border rounded-md border-green-500 px-4 py-0.5 text-center hover:bg-yellow-200">Login</button>
-                <button class="border rounded-md bg-green-600 px-4 py-0.5 text-center hover:bg-yellow-200">Register</button>
-            </div>
+        <!-- icon and button-->
+        <div class="hidden md:flex space-x-8 text-base items-center">
+          <i class="fa-solid fa-magnifying-glass text-xl"></i>
+          <i class="fa-solid fa-cart-shopping text-xl"></i>
+          <button
+            class="border rounded-md border-green-500 px-4 py-0.5 text-center hover:bg-yellow-200"
+          >
+            Login
+          </button>
+          <button
+            class="border rounded-md bg-green-600 px-4 py-0.5 text-center hover:bg-yellow-200"
+          >
+            Register
+          </button>
+        </div>
 
-            <!-- hamburger added for small devices-->
-            <div class="md:hidden flex items-center mr-4">
-                <i class="fa-solid fa-bars text-2xl"></i>
-            </div>
-        </nav>
-        <section>
-
-        </section>
+        <!-- hamburger added for small devices-->
+        <div class="md:hidden flex items-center mr-4">
+          <i class="fa-solid fa-bars text-2xl"></i>
+        </div>
+      </nav>
+      <section class="mt-16 flex flex-col justify-center items-center">
+        <div class="text-center px-4 md:px-0">
+          <h1 class="text-4xl md:text-4xl font-semibold max-w-[320px] md:max-w-[500px] mx-auto">
+            Freshness <span class="text-[#179800]">You Can Count On</span>,
+            Prices You’ll Love!
+          </h1>
+          <p class="mt-4 text-base text-gray-600 max-w-[320px] md:max-w-[450px]">
+            Shop your daily essentials at unbeatable prices. From fresh produce
+            to pantry staples, we’ve got you covered every day!
+          </p>
+        </div>
+        <div class="w-full md:w-[1031px] mt-8 px-4 sm:px-8 md:px-0">
+          <img
+            src="c2-assets/hero-vegetables.png"
+            alt="Fresh produce"
+            class="w-full h-auto"
+          />
+        </div>
+      </section>
     </header>
-    <main>
-
-    </main>
-    <footer>
-
-    </footer>
-
- </body>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
