--- a/index.html
+++ b/index.html
@@ -77,11 +77,15 @@
       </nav>
       <section class="mt-16 flex flex-col justify-center items-center">
         <div class="text-center px-4 md:px-0">
-          <h1 class="text-4xl md:text-4xl font-semibold max-w-[320px] md:max-w-[500px] mx-auto">
+          <h1
+            class="text-4xl md:text-4xl font-semibold max-w-[320px] md:max-w-[500px] mx-auto"
+          >
             Freshness <span class="text-[#179800]">You Can Count On</span>,
             Prices You’ll Love!
           </h1>
-          <p class="mt-4 text-base text-gray-600 max-w-[320px] md:max-w-[450px]">
+          <p
+            class="mt-4 text-base text-gray-600 max-w-[320px] md:max-w-[450px]"
+          >
             Shop your daily essentials at unbeatable prices. From fresh produce
             to pantry staples, we’ve got you covered every day!
           </p>
@@ -95,7 +99,62 @@
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+      <section
+        class="md:text-left text-center md:px-20 mx-auto text-[#179800] text-2xl font-bold mt-[100px]"
+      >
+        Services
+      </section>
+      <section
+        class="mt-12 mx-auto md:px-20 px-6 flex flex-col md:flex-row gap-4 justify-center md:justify-between items-center md:items-stretch"
+      >
+        <div
+          class="bg-[#EFEBE3] rounded-2xl flex flex-col justify-center items-center p-6 md:p-9 gap-4 h-full flex-1 w-full max-w-sm md:max-w-md"
+        >
+          <img
+            src="c2-assets/service.png"
+            alt=""
+            class="rounded-full p-2 border-2 bg-white"
+          />
+          <h4 class="font-bold text-xl">24/7 Services</h4>
+          <p class="flex-grow text-center">
+            24/7 food services ensure that delicious meals are always within
+            reach, day or night. Whether it's a late-night craving or an
+            early-morning bite.
+          </p>
+        </div>
+        <div
+          class="bg-[#EFEBE3] rounded-2xl flex flex-col justify-center items-center p-6 md:p-9 gap-4 h-full flex-1 w-full max-w-sm md:max-w-md"
+        >
+          <img
+            src="c2-assets/delivery.png"
+            alt=""
+            class="rounded-full p-2 border-2 bg-white"
+          />
+          <h4 class="font-bold text-xl">Fast Delivery</h4>
+          <p class="flex-grow text-center">
+            Fast delivery brings your favorite meals right to your doorstep with
+            care and precision. It’s not just a meal—it’s the start of a
+            delightful experience!
+          </p>
+        </div>
+        <div
+          class="bg-[#EFEBE3] rounded-2xl flex flex-col justify-center items-center p-6 md:p-9 gap-4 h-full flex-1 w-full max-w-sm md:max-w-md"
+        >
+          <img
+            src="c2-assets/healthy.png"
+            alt=""
+            class="rounded-full p-2 border-2 bg-white"
+          />
+          <h4 class="font-bold text-xl">Healthy Products</h4>
+          <p class="flex-grow text-center">
+            Healthy products fuel your body with the nutrients it needs to
+            thrive. They’re your partners in achieving a balanced, energetic,
+            and vibrant lifestyle!
+          </p>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
